# WebPortfolioAI

./: README.md  docker-compose.yml  info.yaml
backend/: Dockerfile  main.py  pyproject.toml
backend/core/: config_parser.py
backend/services/: pdf_generator.py
backend/templates/: resume.html
frontend/: Dockerfile
frontend/src/: App.css  App.tsx  index.css
nginx/: nginx.conf
